--- a/src/App.css
+++ b/src/App.css
@@ -25,14 +25,10 @@ html{
     font-size: 8.0rem;
 }
 
-.allButton{
-    display: flex;
-    justify-content: space-evenly;
-}
 
 .button{
     color: white;
-    padding: 5%;
+    padding: 10%;
     border: 1px black solid;
     border-radius: 40px;
     font-family: sans-serif;
@@ -55,3 +51,33 @@ html{
     background-color: #2061b0;
 }
 
+.everything{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 2%;
+}
+
+.numbers{
+    flex-flow: wrap;
+}
+
+.left{
+    width: 56%;
+}
+
+.right{
+    width: 56%;
+}
+
+.operatorStyle{
+    display: flex;
+    flex-direction: column;
+}
+
+.operatorStyle .button{
+    
+}
+
+.numbers .number:nth-child(10){
+    padding: 10% 25% 10%;
+}
